LPS-88924 Language keys

--- a/modules/private/apps/saml/saml-api/src/main/resources/content/Language.properties
+++ b/modules/private/apps/saml/saml-api/src/main/resources/content/Language.properties
@@ -23,6 +23,8 @@ saml-key-store-path-description=Path on the file system to the key store. Only a
 saml-key-store-type=Key Store Type
 saml-keystore-credential-password=Keystore Credential Password
 saml-keystore-credential-password-description=Password used to protect the entry within the keystore
+saml-keystore-encryption-credential-password=Keystore Encryption Credential Password
+saml-keystore-encryption-credential-password-description=Password used to protect the encryption entry within the keystore
 saml-keystore-manager-configuration-name=SAML KeyStoreManager Implementation Configuration
 saml-keystore-manager-description=Defines how the keystore is stored and accessed
 saml-metadata-refresh-interval=Runtime Metadata Refresh Interval
