--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language.properties
@@ -12,6 +12,7 @@ attributes-namespace-enabled-help=When enabled, each attribute statement user at
 auth-certificate=Authenticate Certificate
 certificate=Certificate
 certificate-and-private-key=Certificate and Private Key
+encryption-certificate-and-private-key=Encryption Certificate and Private Key
 certificate-expired-on-x=Certificate expired on {0}.
 certificate-file=Certificate File
 certificate-fingerprints=Certificate Fingerprints
@@ -55,6 +56,7 @@ organization-unit=Organization Unit
 persistent=Persistent
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function.
 please-create-a-signing-credential-before-enabling=Please create a signing credential before enabling.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted.
 please-enter-a-unique-identity-provider-entity-id=Please enter a unique identity provider entity ID.
 please-enter-a-unique-service-provider-entity-id=Please enter a unique service provider entity ID.
 please-enter-a-valid-certificate-validity=Please enter a valid certificate validity.
@@ -90,3 +92,5 @@ windows-domain-qualified-name=Windows Domain Qualified Name
 x509-subject-name=X509 Subject Name
 identity-provider-connections=Identity Provider Connections
 there-are-no-identity-providers=There are no identity providers.
+delete-certificate=Delete Certificate
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore?
