LPS-89014 | LPS-91445 Add id property to SLA scheme model

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-openapi.yaml
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-openapi.yaml
@@ -23,6 +23,9 @@ components:
                 duration:
                     format: int64
                     type: integer
+                id:
+                    format: int64
+                    type: integer
                 name:
                     type: string
                 pauseNodeNames:
