--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-test/build.gradle
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-test/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
 	testIntegrationCompile group: "com.liferay", name: "com.liferay.arquillian.extension.junit.bridge", version: "1.0.8"
 	testIntegrationCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	testIntegrationCompile project(":core:petra:petra-string")
 	testIntegrationCompile project(":private:apps:portal-workflow:portal-workflow-metrics-api")
 }
