--- a/modules/private/apps/saml/saml-api/src/main/resources/content/Language.properties
+++ b/modules/private/apps/saml/saml-api/src/main/resources/content/Language.properties
@@ -22,7 +22,7 @@ saml-key-store-path=Key Store Path
 saml-key-store-path-description=Path on the file system to the key store. Only applies when using the Filesystem Keystore Manager
 saml-key-store-type=Key Store Type
 saml-keystore-credential-password=Keystore Credential Password
-saml-keystore-credential-password-description=Password used to protect the entry within the keystore
+saml-keystore-credential-password-description=Set the password used to protect the entry within the keystore.
 saml-keystore-encryption-credential-password=Keystore Encryption Credential Password
 saml-keystore-encryption-credential-password-description=Password used to protect the encryption entry within the keystore
 saml-keystore-manager-configuration-name=SAML KeyStoreManager Implementation Configuration
