--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language.properties
@@ -1,3 +1,6 @@
+a-duration-time-is-required=A duration time is required.
+a-name-is-required=A name is required.
+an-sla-with-the-same-name-already-exists=An SLA with the same name already exists.
 entries=Entries
 items=Items
 metrics=Metrics
