--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language.properties
@@ -17,5 +17,5 @@ search-for=Search for...
 showing=Showing
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries.
 total-open=Total Open
-x-item={0} item
-x-items={0} items
+x-item={0} Item
+x-items={0} Items
