LPS-89014 | LPS-91445 Rename to Liferay.Portal.Workflow.Metrics instead

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-config.yaml
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-config.yaml
@@ -3,5 +3,5 @@ apiPackagePath: "com.liferay.portal.workflow.metrics.rest"
 application:
     baseURI: "/portal-workflow-metrics-rest"
     className: "PortalWorkflowMetricsRestApplication"
-    name: "portal-workflow-metrics-rest-application"
+    name: "Liferay.Portal.Workflow.Metrics"
 author: "Rafael Praxedes"
