LPS-86638 | LPS-90764 Add Workflow Metrics Rest Test

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-config.yaml
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-config.yaml
@@ -5,3 +5,4 @@ application:
     className: "PortalWorkflowMetricsRESTApplication"
     name: "Liferay.Portal.Workflow.Metrics.REST"
 author: "Rafael Praxedes"
+testDir: "../portal-workflow-metrics-rest-test/src/testIntegration/java"
