--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-config.yaml
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-config.yaml
@@ -1,7 +1,7 @@
 apiDir: "../portal-workflow-metrics-rest-api/src/main/java"
 apiPackagePath: "com.liferay.portal.workflow.metrics.rest"
 application:
-    baseURI: "/portal-workflow-metrics-rest"
-    className: "PortalWorkflowMetricsRestApplication"
-    name: "Liferay.Portal.Workflow.Metrics"
+    baseURI: "/portal-workflow-metrics"
+    className: "PortalWorkflowMetricsRESTApplication"
+    name: "Liferay.Portal.Workflow.Metrics.REST"
 author: "Rafael Praxedes"
