LPS-89014 | LPS-89911 Create tests to SLA List and Form

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-web/.eslintrc
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-web/.eslintrc
@@ -17,6 +17,7 @@
 		"_": true,
 		"alert": true,
 		"confirm": true,
+		"mount": true,
 		"shallow": true,
 		"submitForm": true,
 		"themeDisplay": true,
