LPS-89014 | LPS-90826 Create an index to store the sla checks results

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-service/src/main/resources/META-INF/search/mappings.json
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-service/src/main/resources/META-INF/search/mappings.json
@@ -534,6 +534,57 @@
 			}
 		}
 	},
+	"WorkflowMetricsSLACheckerResultType": {
+		"date_detection": false,
+		"dynamic_templates": [
+			{
+				"template_long_sortable": {
+					"mapping": {
+						"store": true,
+						"type": "long"
+					},
+					"match": "*_sortable",
+					"match_mapping_type": "long"
+				}
+			}
+		],
+		"properties": {
+			"companyId": {
+				"store": true,
+				"type": "keyword"
+			},
+			"elapsedTime": {
+				"store": true,
+				"type": "long"
+			},
+			"instanceId": {
+				"store": true,
+				"type": "keyword"
+			},
+			"lastCheckDate": {
+				"format": "yyyyMMddHHmmss",
+				"store": true,
+				"type": "date"
+			},
+			"onTime": {
+				"store": true,
+				"type": "boolean"
+			},
+			"overdueDate": {
+				"format": "yyyyMMddHHmmss",
+				"store": true,
+				"type": "date"
+			},
+			"processId": {
+				"store": true,
+				"type": "keyword"
+			},
+			"remainingTime": {
+				"store": true,
+				"type": "long"
+			}
+		}
+	},
 	"WorkflowMetricsTaskType": {
 		"date_detection": false,
 		"dynamic_templates": [
