LPS-89014 | LPS-90826 Add Scheduled Task to update the instances status based on an SLA definition

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language.properties
@@ -2,6 +2,8 @@ a-duration-time-is-required=A duration time is required.
 a-name-is-required=A name is required.
 an-sla-with-the-same-name-already-exists=An SLA with the same name already exists.
 cancel=Cancel
+check-sla-job-interval=Check SLA Job Interval
+check-sla-job-interval-description=Set the job interval in minutes.
 days=Days
 days-abbreviation=d
 define-a-duration-time-to-be-met=Define a duration time to be met.
@@ -48,8 +50,10 @@ sla-definition=SLA Definition
 sla-was-deleted=SLA was deleted.
 sla-name=SLA Name
 slas=SLAs
+the-job-interval-must-be-greater-than-0=The job interval must be greater than 0.
 total-open=Total Open
 value-must-be-an-integer-above-x=Value must be an integer above {0}.
 updating=Updating:
+workflow-metrics-configuration-name=Workflow Metrics
 x-item={0} Item
 x-items={0} Items
