LPS-88573|LPS-89590 Update message key.

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language.properties
@@ -10,8 +10,8 @@ define-a-duration-time-to-be-met=Define a duration time to be met.
 delete=Delete
 deleting-slas-will-reflect-on-report-data=Deleting SLAs will reflect on report data. This action cannot be undone. Are you sure you want to permanently delete it?
 description=Description
-duration-time=Duration Time
 duration=Duration
+duration-time=Duration Time
 edit=Edit
 enter-a-whole-number=Enter a whole number.
 enter-at-least-one-of-the-following-fields=Enter at least one of the following fields.
@@ -44,16 +44,17 @@ reports=Reports
 save=Save
 search-for=Search for...
 set-up-slas=Set Up SLAs
-showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries.
 showing=Showing
+showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries.
 sla-definition=SLA Definition
-sla-was-deleted=SLA was deleted.
 sla-name=SLA Name
+sla-was-deleted=SLA was deleted.
 slas=SLAs
 the-job-interval-must-be-greater-than-0=The job interval must be greater than 0.
 total-open=Total Open
-value-must-be-an-integer-above-x=Value must be an integer above {0}.
+total-pending=Total Pending
 updating=Updating:
+value-must-be-an-integer-above-x=Value must be an integer above {0}.
 workflow-metrics-configuration-name=Workflow Metrics
 x-item={0} Item
 x-items={0} Items
