--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language.properties
@@ -6,7 +6,7 @@ days=Days
 days-abbreviation=d
 define-a-duration-time-to-be-met=Define a duration time to be met.
 delete=Delete
-deleting-slas-will-reflect-on-report-data=Deleting SLAs will reflect on report data. This action can't be undone. Are you sure you want to permanently delete it?
+deleting-slas-will-reflect-on-report-data=Deleting SLAs will reflect on report data. This action cannot be undone. Are you sure you want to permanently delete it?
 description=Description
 duration-time=Duration Time
 duration=Duration
@@ -45,7 +45,7 @@ set-up-slas=Set Up SLAs
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries.
 showing=Showing
 sla-definition=SLA Definition
-sla-deleted=SLA deleted.
+sla-was-deleted=SLA was deleted.
 sla-name=SLA Name
 slas=SLAs
 total-open=Total Open
