--- a/modules/private/apps/portal-workflow/portal-workflow-kaleo-forms-service/build.gradle
+++ b/modules/private/apps/portal-workflow/portal-workflow-kaleo-forms-service/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 	compileOnly project(":apps:dynamic-data-lists:dynamic-data-lists-api")
 	compileOnly project(":apps:dynamic-data-mapping:dynamic-data-mapping-api")
 	compileOnly project(":apps:portal:portal-dao-orm-custom-sql-api")
+	compileOnly project(":apps:portal:portal-instance-lifecycle-api")
 	compileOnly project(":apps:portal:portal-spring-extender-api")
 	compileOnly project(":apps:portal:portal-upgrade-api")
 	compileOnly project(":core:osgi-service-tracker-collections")
