--- a/modules/private/apps/portal-rules-engine-drools/portal-rules-engine-drools-test/build.gradle
+++ b/modules/private/apps/portal-rules-engine-drools/portal-rules-engine-drools-test/build.gradle
@@ -3,5 +3,5 @@ dependencies {
 	testIntegrationCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	testIntegrationCompile project(":apps:portal-rules-engine:portal-rules-engine-api")
 	testIntegrationCompile project(":core:registry-api")
-	testIntegrationCompile project(":private:apps:portal-rules-engine:portal-rules-engine-drools")
+	testIntegrationCompile project(":private:apps:portal-rules-engine-drools:portal-rules-engine-drools")
 }
