LPS-88968 | LPS-92420 Typo

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-service/src/main/resources/META-INF/search/mappings.json
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-service/src/main/resources/META-INF/search/mappings.json
@@ -539,7 +539,7 @@
 			}
 		}
 	},
-	"WorkflowMetricsSLACheckerResultType": {
+	"WorkflowMetricsSLAProcessResultType": {
 		"date_detection": false,
 		"dynamic_templates": [
 			{
@@ -587,6 +587,10 @@
 			"remainingTime": {
 				"store": true,
 				"type": "long"
+			},
+			"slaDefinitionId": {
+				"store": true,
+				"type": "keyword"
 			}
 		}
 	},
