LPS-88968 | LPS-92420 Typo

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-openapi.yaml
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-rest-impl/rest-openapi.yaml
@@ -23,7 +23,7 @@ components:
                 instanceCount:
                     format: int64
                     type: integer
-                ontimeInstanceCount:
+                onTimeInstanceCount:
                     format: int64
                     type: integer
                 overdueInstanceCount:
