--- a/modules/private/apps/portal-workflow/portal-workflow-kaleo-forms-web/build.gradle
+++ b/modules/private/apps/portal-workflow/portal-workflow-kaleo-forms-web/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	compileOnly project(":apps:portal-workflow:portal-workflow-kaleo-definition-api")
 	compileOnly project(":apps:portal:portal-upgrade-api")
 	compileOnly project(":apps:static:portal-configuration:portal-configuration-metatype-api")
+	compileOnly project(":core:petra:petra-function")
 	compileOnly project(":core:petra:petra-lang")
 	compileOnly project(":core:petra:petra-string")
 	compileOnly project(":private:apps:portal-workflow:portal-workflow-kaleo-designer-web")
