LPS-91450 Update GUI

--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language.properties
@@ -24,6 +24,8 @@ delete-certificate=Delete Certificate
 download-certificate=Download Certificate
 dsa=DSA
 encrypted=Encrypted
+encryption=Encryption
+encryption-forced=Encryption Required
 encryption-certificate-and-private-key=Encryption Certificate and Private Key
 entity=Entity
 entity-id-help=Entity ID is a unique identifier that can be up to 1024 characters long.
