LPS-91450 SF - consistency

--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language.properties
@@ -25,7 +25,7 @@ download-certificate=Download Certificate
 dsa=DSA
 encrypted=Encrypted
 encryption=Encryption
-encryption-forced=Encryption Required
+encryption-forced=Force Encryption
 encryption-certificate-and-private-key=Encryption Certificate and Private Key
 entity=Entity
 entity-id-help=Entity ID is a unique identifier that can be up to 1024 characters long.
